<resources>

    <string name="app_name">AcademicPlanner</string>
    <string name="academic_planner">Academic Planner</string>
    <string name="terms">TERMS</string>
    <string name="courses">COURSES</string>
    <string name="assessments">ASSESSMENTS</string>
    <string name="exit">EXIT</string>
    <string name="assessment">+ASSESSMENT</string>
    <string name="home">HOME</string>
    <string name="termsOverMenuOpt">ALL TERMS</string>
    <string name="coursesOvrMenuOpt">ALL COURSES</string>
    <string name="assessmentsOvrMenuOpt">ALL ASSESSMENTS</string>
    <string name="exitOvrMenuOpt">EXIT</string>
    <string name="addCoursesTrmDtls">+COURSES</string>
    <string name="addCoursesTermList">+COURSE</string>
    <string name="addTermsTermsList">+TERM</string>
    <string name="saveButCourseDtls">SAVE</string>
    <string name="share_noteButCrsDtls">SHARE NOTE</string>
    <string name="addAssessmentAsmntLst">+ASSESSMENT</string>
    <string name="channel_name">First Channel NAME</string>
    <string name="channel_description">First Channel DESCRIPTION</string>
    <string name="addAsmntsCrsLstLabel">+ASSESSMENT</string>
    <string name="addCrsCrsLstButtonLabel">+COURSE</string>
    <string name="select_an_assessment_to_edit">Select an Assessment to Edit</string>
    <string name="all_assessments">ALL ASSESSMENTS</string>
    <string name="notify_start_date">NOTIFY START DATE</string>
    <string name="notify_end_date">NOTIFY END DATE</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="all_terms">ALL TERMS</string>
    <string name="notify_start_date_term">NOTIFY START DATE</string>
    <string name="notify_end_date_term">NOTIFY END DATE</string>
    <string name="delete_term">DELETE</string>
    <string name="save_term">SAVE</string>
    <string name="all_courses">ALL COURSES</string>
    <string name="notify_start_date_courses">NOTIFY START DATE</string>
    <string name="notify_end_date_courses">NOTIFY END DATE</string>
    <string name="share_note_courses">SHARE NOTE</string>
    <string name="delete_courses">DELETE</string>
    <string name="save_courses">SAVE</string>

    <string-array name="courseStatusSpinnerArray">
        <item>Status Not Selected</item>
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan To Take</item>
    </string-array>

    <string-array name="asmntTypeSpinArr">
        <item>Type Not Selected</item>
        <item>Performance</item>
        <item>Objective</item>
    </string-array>

</resources>